--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,32 +2,35 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+/* Untuk perangkat dengan lebar layar kurang dari atau sama dengan 640px (misalnya, perangkat mobile) */
+@media (max-width: 640px) {
+  .min-h-screen {
+    /* Set tinggi sesuai kebutuhan pada perangkat mobile */
+    min-height: auto;
   }
-}
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
+  .flex {
+    /* Mengubah tata letak menjadi kolom di perangkat mobile */
+    flex-direction: column;
+  }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+  .items-center {
+    /* Pusatkan item-item di tengah secara vertikal pada perangkat mobile */
+    align-items: center;
+  }
+
+  .justify-center {
+    /* Pusatkan item-item di tengah secara horizontal pada perangkat mobile */
+    justify-content: center;
+  }
+
+  .max-w-md {
+    /* Atur lebar maksimum menjadi lebih kecil pada perangkat mobile */
+    max-width: 90%;
+  }
+
+  .mr-4 {
+    /* Hapus margin kanan pada elemen pertama di perangkat mobile */
+    margin-right: 0;
   }
 }
